--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=employee-service
 server.port=8000
-spring.datasource.url=jdbc:h2:mem:assesdb
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-spring.messages.basename=messages
-spring.messages.encoding=UTF-8
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.enabled=true
-server.servlet.encoding.force=true
+#spring.datasource.url=jdbc:h2:mem:assesdb
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#spring.messages.basename=messages
+#spring.messages.encoding=UTF-8
+#server.servlet.encoding.enabled=true
+spring.config.import=optional:configserver:http://localhost:8888
